<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/eventSeverity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/infoicon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/eventActionLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:gravity="right"
                android:maxLines="1"
                android:paddingRight="10dp"
                android:text="@string/event_action_label" />

            <TextView
                android:id="@+id/eventAction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="left"
                android:maxLines="1"
                android:text="eventAction" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/eventPerformedbyLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:gravity="right"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/event_performedby_label" />

                <TextView
                    android:id="@+id/eventPerformedby"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:gravity="left"
                    android:maxLines="1"
                    android:text="performedBy" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/eventTimestampLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:gravity="right"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/event_timestamp_label" />

                <TextView
                    android:id="@+id/eventTimestamp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="left"
                    android:maxLines="1"
                    android:text="actionTimestamp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>